gatekeeper/constraints/disallow-host-network.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
    name: disallow-host-network
    annotations:
        argocd.argoproj.io/sync-wave: "1"
spec:
    enforcementAction: deny
    match:
        excludedNamespaces:
            - argocd
            - argo-rollouts
            - external-secrets
            - gatekeeper-system
            - kube-system
            - monitoring
        kinds:
            - apiGroups: [""]
              kinds: ["Pod"]
    parameters:
        hostNetwork: false
        min: 0
        max: 0
