gatekeeper/constraints/disallow-root-user.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowRootUser
metadata:
    name: disallow-root-user
    annotations:
        argocd.argoproj.io/sync-wave: "1"
spec:
    enforcementAction: deny
    match:
        excludedNamespaces:
            - argocd
            - argo-rollouts
            - external-secrets
            - gatekeeper-system
            - kube-system
            - monitoring
        kinds:
            - apiGroups: [""]
              kinds: ["Pod"]
            - apiGroups: ["apps"]
              kinds: ["DaemonSet", "Deployment", "ReplicaSet", "StatefulSet"]
            - apiGroups: ["batch"]
              kinds: ["CronJob", "Job"]
            - apiGroups: ["argoproj.io"]
              kinds: ["Rollout"]
